# 8x8puzzle

./: .gitignore  Jupyter_Main.ipynb  a_star.py  disposition.py  helper.py  main.py  main2.py  manhatten.py  pyproject.toml  tree.py
