[tool.poetry]
name = "8x8puzzle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"
numpy = "^1.20.2"
autopep8 = "^1.5.6"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
